--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <label for="exampleInputname" class="form-label">Item Price</label>
                 <input type="number" class="form-control" required id="inputPrice" aria-describedby="nameHelp">
             </div>
-            <button id="addBtn" type="submit" class="btn btn-primary w-100" onclick="handleTodos(event)">Add</button>
-            <button id="updateBtn" type="submit" class="btn btn-primary w-100" onclick="updateTodoData(event)">Update</button>
+            <button id="addBtn" type="submit" class="btn btn-primary w-100 mt-2" onclick="handleTodos(event)">Add</button>
+            <button id="updateBtn" type="submit" class="btn btn-primary w-100 mt-2" onclick="updateTodoData(event)">Update</button>
         </form>
         <div class="listOfItems mt-4" id="listOfItems">
             <h3 class="text-center">List of Items</h3>
