--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/to-do-list.png" type="image/x-icon">
+    <link rel="icon" href="./to-do-list.png" type="image/x-icon">
     <!-- Bootstrap JS bundle via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 <title>Todo App</title>
 </head>
 <body>
-    <div class="container pt-3 todoContainer h-100">
+    <div id="mainContainer" class="container pt-3 todoContainer h-100">
         <h2 class="text-center">Todo App</h2>
         <form>
             <div class="mb-1">
